--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "url": "https://github.com/water-my-plants-2/Backend/issues"
   },
   "homepage": "https://github.com/water-my-plants-2/Backend#readme",
+  "jest": {
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -26,6 +29,7 @@
     "jest": "^26.0.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.1",
+    "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.4",
     "sqlite3": "^4.2.0",
     "supertest": "^4.0.2"
