readme file, and added postgres dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/node_modules
+npm-debug.log
+.DS_Store
+/*.env 
 # Logs
 logs
 *.log
@@ -102,3 +106,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+
