--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "server": "nodemon index.js",
     "test": "cross-env DB_ENV=testing jest --watch"
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/water-my-plants-2/Backend.git"
   },
+  "keywords": [
+    "heroku"
+  ],
   "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/water-my-plants-2/Backend/issues"
+  },
+  "engines": {
+    "node": "12.14.1"
   },
   "homepage": "https://github.com/water-my-plants-2/Backend#readme",
   "jest": {
@@ -32,6 +39,7 @@
     "knex": "^0.21.1",
     "knex-cleaner": "^1.3.0",
     "nodemon": "^2.0.4",
+    "pg": "^8.2.1",
     "sqlite3": "^4.2.0",
     "supertest": "^4.0.2"
   }
