--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
-    "test": "cross-env DB_ENV=testing jest --watch"
+    "start": "cross-env NODE_ENV=production node index.js",
+    "server": "cross-env NODE_ENV=development nodemon -r dotenv/config index.js",
+    "test": "cross-env NODE_ENV=testing jest --watch"
   },
   "repository": {
     "type": "git",
