--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
-    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^3.22.0",
     "jest": "^26.0.1",
@@ -42,5 +41,8 @@
     "pg": "^8.2.1",
     "sqlite3": "^4.2.0",
     "supertest": "^4.0.2"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
